Tracepoint commands & enum

--- a/Todo.txt
+++ b/Todo.txt
@@ -11,6 +11,8 @@ jpufbt
  
 jpfsv
 ------------------------------------------------------------------------
- * Cmdproc lock?
  
- * Handle leaks?
+ 
+ 
+ 
+ * Leaks?
