--- a/Todo.txt
+++ b/Todo.txt
@@ -2,7 +2,7 @@ TODO
 
 jpfbt
 ------------------------------------------------------------------------
-
+ * Exception codes in thunks.asm
 
 jpufbt
 ------------------------------------------------------------------------
@@ -15,8 +15,10 @@ jpfsv
  * Grow tracetab
  * force detach w/ ufag unload if starttrace failed in JpfsvpAttachCommand
  * hang on peer death
- 
+ * SymFromAddr-cache
  * Error messages: use jpdiag resolver
  
+ * mc files
+ * symsetopt( undnames )
  
  * Leaks?
