--- a/Todo.txt
+++ b/Todo.txt
@@ -6,7 +6,7 @@ jpfbt
  * Naming: Thunk vs. Proxy
  
  Kernel
-   * KM-TLS?
+   * MmGetSystemAddressForMdlSafe may return NULL
  
 jpufbt
 ------------------------------------------------------------------------
@@ -23,3 +23,6 @@ jpfsv
  * Bugs
  
  * Leaks?
+ 
+ 
+ 
