--- a/Todo.txt
+++ b/Todo.txt
@@ -19,10 +19,9 @@ jpfsv
  * Grow tracetab
  * force detach w/ ufag unload if starttrace failed in JpfsvpAttachCommand
  * symsetopt( undnames )
+ * symbol load status callback -> show on console
  
- * Bugs
- 
- * Leaks?
+ * tp:check tracability for kernel mode via IOCTL
  
  
  
