Fixes: race cond in buffer mgmt, use of paged mem at high irql

--- a/Todo.txt
+++ b/Todo.txt
@@ -1,5 +1,12 @@
 TODO
 
+BUGS
+ * MmIsAddValid-freezes
+ * Unpatching routines of a driver that has been unloaded --> bsod
+ * suspicious status?
+ * premature unloading sometimes bugchecks
+
+
 jpfbt
 ------------------------------------------------------------------------
   * Naming: Thunk vs. Proxy
