SEH support for Svr03, not functional on Vista+

--- a/Todo.txt
+++ b/Todo.txt
@@ -19,6 +19,8 @@ jpfbt
 
  * Exceptions
  
+ make RtlPointers mandatory
+ 
 jpufbt
 ------------------------------------------------------------------------
  * VS_VERSION_INFO jpufag
